--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,16 @@
     "description": "Markdown to Hatena",
     "version": "0.01",
     "permissions": ["contextMenus"],
+    "content_scripts": [
+      {
+        "matches": [
+          "https://*/*"
+        ],
+        "js": [
+          "cs.js"
+        ]
+      }
+    ],
     "background": {
       "scripts": ["bg.js"]
     },
