--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "chrome-md2hatena",
   "version": "1.0.0",
   "author": "Cside <cside.story@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "md2hatena": "^0.3.1"
+  }
 }
